// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomMetricsForm /> renders create customMetric 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={false}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={false}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={false}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-abandon-threshold"
    inputType="text"
    label="Abandon Threshold"
    labelHelpText="(seconds)"
    name="slaAbandonThreshold"
  />
</form>
`;

exports[`<CustomMetricsForm /> renders update customMetric 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={false}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={false}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={false}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-abandon-threshold"
    inputType="text"
    label="Abandon Threshold"
    labelHelpText="(seconds)"
    name="slaAbandonThreshold"
  />
</form>
`;

exports[`<CustomMetricsForm /> renders update customMetric saving and inherited with count-against-sla type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={true}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={true}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={true}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={true}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
</form>
`;

exports[`<CustomMetricsForm /> renders update customMetric saving and inherited with ignored-abandoned-calls type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={true}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={true}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={true}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={true}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={true}
    id="frm-custom-metrics-sla-abandon-threshold"
    inputType="text"
    label="Abandon Threshold"
    labelHelpText="(seconds)"
    name="slaAbandonThreshold"
  />
</form>
`;

exports[`<CustomMetricsForm /> renders update customMetric with count-against-sla type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={false}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={false}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={false}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
</form>
`;

exports[`<CustomMetricsForm /> renders update customMetric with ignored-abandoned-calls type 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={false}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={false}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={false}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={false}
    id="frm-custom-metrics-sla-abandon-threshold"
    inputType="text"
    label="Abandon Threshold"
    labelHelpText="(seconds)"
    name="slaAbandonThreshold"
  />
</form>
`;

exports[`<CustomMetricsForm /> renders update customMetric without update permision 1`] = `
<form
  onSubmit={[Function]}
>
  <DetailHeader
    text="Details"
  />
  <InputField
    componentType="input"
    disabled={true}
    id="frm-custom-metrics-name"
    inputType="text"
    label="Name *"
    name="name"
  />
  <InputField
    componentType="textarea"
    disabled={true}
    id="frm-custom-metrics-description"
    inputType="text"
    label="Description"
    name="description"
  />
  <DetailHeader
    text="Properties"
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={true}
    id="frm-custom-metrics-sla-threshold"
    inputType="text"
    label="SLA Threshold"
    labelHelpText="(seconds)"
    name="slaThreshold"
  />
  <RadioGroupField
    disabled={true}
    id="frm-custom-metrics-sla-abandon-type"
    label="SLA Abandon Type"
    name="slaAbandonType"
    options={
      Array [
        Object {
          "helpText": "(Filter Out / Exclude Short Abandons)",
          "label": "Ignore Abandons",
          "value": "ignored-abandoned-calls",
        },
        Object {
          "helpText": "(Include short abandons against/in SLA)",
          "label": "Count Against SLA",
          "value": "count-against-sla",
        },
      ]
    }
    required={true}
  />
  <InputField
    componentType="input"
    dataType="number"
    disabled={true}
    id="frm-custom-metrics-sla-abandon-threshold"
    inputType="text"
    label="Abandon Threshold"
    labelHelpText="(seconds)"
    name="slaAbandonThreshold"
  />
</form>
`;
